--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "appcontacts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://FajyNyq.github.io/appcontacts",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -15,6 +17,7 @@
     "redux": "^4.0.5"
   },
   "scripts": {
+    "deploy":"npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
